--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,23 +1,41 @@
 <% include ./partials/header.ejs %>
-  <div class="w-full min-h-screen bg-zinc-900 text-white py-5">
+
+<form hidden id="fileform" method="post" enctype="multipart/form-data" action="/upload">
+  <input id="file" type="file" name="image">
+</form>
+  
+<div class="w-full min-h-screen bg-zinc-900 text-white py-5">
     <div class="flex justify-between items-center px-4">
       <a class="text-sm text-blue-500" href="/profile"><i class="ri-arrow-left-s-line"></i> profile</a>
       <h2 class="leading-none text-sm">Edit Profile</h2>
       <a class="text-sm" href="/feed"><i class="ri-home-line"></i> home</a>
     </div>
     <div class="flex flex-col items-center gap-2 mt-20">
-      <div class="image w-20 h-20 bg-sky-100 rounded-full"></div>
-      <button class="text-blue-500 capitalize">edit picture</button>
+      <div class="image w-20 h-20 bg-sky-100 rounded-full overflow-hidden">
+        <img class="w-full h-full object-cover" src="/images/uploads/<%= user.picture %>" alt="">
+      </div>
+      <button id="editbtn" class="text-blue-500 capitalize">edit picture</button>
     </div>
     <div class="gap-5 px-4 mt-10">
       <h3 class="text-lg leading-none">Edit Account Details</h3>
       <hr class="opacity-30 my-3">
-      <form class="w-full" action="">
-        <input class="px-3 mt-2 py-2 border-2 border-zinc-800 rounded-md block w-full bg-zinc-900" type="text" placeholder="username" name="password">
-        <input class="px-3 mt-2 py-2 border-2 border-zinc-800 rounded-md block w-full bg-zinc-900" type="text" placeholder="name" name="name">
-        <textarea class="px-3 mt-2 py-2 border-2 border-zinc-800 rounded-md block w-full bg-zinc-900 resize-none" placeholder="Bio"></textarea>
+      <form class="w-full" action="/update" method="post">
+        <input class="px-3 mt-2 py-2 border-2 border-zinc-800 rounded-md block w-full bg-zinc-900" type="text" placeholder="username" name="username" value="<%= user.username %>">
+        <input class="px-3 mt-2 py-2 border-2 border-zinc-800 rounded-md block w-full bg-zinc-900" type="text" placeholder="name" name="name" value="<%= user.name %>">
+        <textarea class="px-3 mt-2 py-2 border-2 border-zinc-800 rounded-md block w-full bg-zinc-900 resize-none" placeholder="Bio" name="bio"><%= user.bio %></textarea>
         <input class="w-full bg-blue-500 px-3 py-3 rounded-md mt-2" type="submit" value="Update Details">
       </form>
     </div>
   </div>
+
+  <script>
+    document.querySelector("#editbtn").addEventListener("click", function(){
+      document.querySelector("#file").click();
+    })
+
+    document.querySelector("#file")
+    .addEventListener("change", function(){
+      document.querySelector("#fileform").submit();
+    });
+  </script>
 <% include ./partials/footer.ejs %>
