--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -11,9 +11,9 @@
       </div>
       <button id="selectpic" class="text-blue-500 capitalize">select picture</button>
     </div>
-    <form id="uploadform" action="/upload" class="w-full px-6 py-3 mt-10" enctype="multipart/form-data" method="post">
+    <form id="uploadform" action="/post" class="w-full px-6 py-3 mt-10" enctype="multipart/form-data" method="post">
         <input hidden type="file" name="image">
-        <textarea class="px-2 py-1 w-full bg-zinc-900 border-2 h-20 border-zinc-800 resize-none rounded-md outline-none" placeholder="Write a caption..."></textarea>
+        <textarea name="caption" class="px-2 py-1 w-full bg-zinc-900 border-2 h-20 border-zinc-800 resize-none rounded-md outline-none" placeholder="Write a caption..."></textarea>
         <input class="w-full px-2 py-2 bg-blue-500 rounded-md" type="submit" value="Post">
     </form>
   </div>
