--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,27 +1,43 @@
 <% include ./partials/header.ejs %>
-  <div class="w-full min-h-screen bg-zinc-900 px-4 py-5">
-    <div class="border-2 border-zinc-800 flex items-center justify-between px-2 py-1 rounded-md">
-        <i class="text-white ri-search-line"></i>
-        <input class="ml-1 w-full bg-zinc-900 outline-none text-zinc-400" type="text" placeholder="search username">
-    </div>
-    <div class="users">
-        <a href="/profile" class="outline-none">
-            <div class="text-white flex items-center gap-2 mt-5">
-                <div class="image w-[11vw] h-[11vw] rounded-full bg-sky-100"></div>
-                <div class="text">
-                    <h3>iamharshvandanasharma</h3>
-                    <h4 class="text-xs opacity-30 leading-none">Harsh Vandana Sharma</h4>
-                </div>
-            </div>            
-        </a>
+    <div class="w-full min-h-screen bg-zinc-900 px-4 py-5">
+        <div class="border-2 border-zinc-800 flex items-center justify-between px-2 py-1 rounded-md">
+            <i class="text-white ri-search-line"></i>
+            <input class="input ml-1 w-full bg-zinc-900 outline-none text-zinc-400" type="text"
+                placeholder="search username">
+        </div>
+        <div class="users">
 
-        <div class="text-white flex items-center gap-2 mt-5">
-            <div class="image w-[11vw] h-[11vw] rounded-full bg-sky-100"></div>
-            <div class="text">
-                <h3>iamharshvandanasharma</h3>
-                <h4 class="text-xs opacity-30 leading-none">Harsh Vandana Sharma</h4>
-            </div>
         </div>
     </div>
-  </div>
-<% include ./partials/footer.ejs %>
+
+    <script>
+        var inp = document.querySelector(".input")
+
+        inp.addEventListener("input", function (e) {
+            if (inp.value !== '') {
+                fetch(`/search/${inp.value}`)
+                    .then(raw => raw.json())
+                    .then(result => {
+                        let clutter = "";
+
+                        result.forEach((item) => {
+                            clutter += `<a href="/profile/${item.username}" class="outline-none">
+            <div class="text-white flex items-center gap-2 mt-5">
+                <div class="image w-[11vw] h-[11vw] rounded-full bg-sky-100 overflow-hidden">
+                    <img src="/images/uploads/${item.picture}" alt="">
+                    </div>
+                <div class="text">
+                    <h3>${item.username}</h3>
+                    <h4 class="text-xs opacity-30 leading-none">${item.name}</h4>
+                </div>
+            </div>            
+        </a>`
+                        })
+
+                        document.querySelector(".users")
+                            .innerHTML = clutter;
+                    });
+            }
+        })
+    </script>
+    <% include ./partials/footer.ejs %>
