--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -8,17 +8,27 @@
       </div>
     </div>
     <div class="story px-3 flex gap-3 overflow-auto mt-5">
-      <% stories.forEach(function(story){ %>
+      <a href="/story">
         <div class="circle flex-shrink-0">
           <div
             class="gradient w-[18vw] h-[18vw] bg-sky-100 rounded-full bg-gradient-to-r from-purple-700 to-orange-500 flex items-center justify-center">
             <div class="inner w-[92%] h-[92%] rounded-full overflow-hidden">
-              <img class="w-full h-full object-cover"
-                src="/images/uploads/<%= story.user.picture %>"
-                alt="">
+              <img class="w-full h-full object-cover" src="/images/uploads/<%= user.picture %>" alt="">
             </div>
           </div>
         </div>
+      </a>
+      <% stories.forEach(function(story){ %>
+        <a href="/story/<%= story.id %>">
+          <div class="circle flex-shrink-0">
+            <div
+              class="gradient w-[18vw] h-[18vw] bg-sky-100 rounded-full bg-gradient-to-r from-purple-700 to-orange-500 flex items-center justify-center">
+              <div class="inner w-[92%] h-[92%] rounded-full overflow-hidden">
+                <img class="w-full h-full object-cover" src="/images/uploads/<%= story.user.picture %>" alt="">
+              </div>
+            </div>
+          </div>
+        </a>
         <% }) %>
     </div>
     <div class="posts parent mb-20">
@@ -26,7 +36,7 @@
         <div class="post mt-10 w-full min-h-[50vh]">
           <div class="title px-4 flex items-center gap-2">
             <div class="w-[9vw] h-[9vw] bg-sky-100 rounded-full overflow-hidden">
-              <img src="/images/uploads/<%= post.user.picture %>" alt="">
+              <img class="w-full h-full object-cover" src="/images/uploads/<%= post.user.picture %>" alt="">
             </div>
             <h4 class="text-sm">
               <%= post.user.username %>
